tests/lean/bad_pattern2.lean
definition foo : nat → nat
| bla.boo := bla.boo
